FCTF-k3s-manifest/prod/app/NetworkPolicy/deployment-consumer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deployment-consumer-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: deployment-consumer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # kubelet readiness/liveness probes
    - ports:
        - protocol: TCP
          port: 5040
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Redis in db namespace (including headless pods)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app.kubernetes.io/name: redis
      ports:
        - protocol: TCP
          port: 6379
    # MariaDB in db namespace (including headless pods)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mariadb
      ports:
        - protocol: TCP
          port: 3306
    # Argo workflow controller
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argo
      ports:
        - protocol: TCP
          port: 2746
    # RabbitMQ
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq
      ports:
        - protocol: TCP
          port: 5671
