FCTF-k3s-manifest/prod/app/NetworkPolicy/rabbitmq.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-from-app-only
  namespace: db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: app
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - deployment-center
                  - deployment-consumer
      ports:
        - protocol: TCP
          port: 5672
